2007-10-16  Martin Lambers <marlam@marlam.de>

	* src/interpolation_selector.cpp, src/viewpoint_selector.cpp: Add
	keyboard shortcuts to buttons.

2007-10-11  Martin Lambers <marlam@marlam.de>

	* src/pixel_info.cpp, src/channel_info.cpp: Print numbers with higher
	precision.

2007-10-09  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
	MH_DIRSEP. Update the users accordingly.

2007-10-03  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvlview.texi, doc/cvlview.1, NEWS: Update for
	version 0.1.2.

2007-09-18  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Do not fail on images where a channel contains 
	only a single value, and therefore min == max. Bug reported by Maik
	Keller <keller@fb12.uni-siegen.de>.
	* src/interpolation_selector.cpp: Disable interpolation by default,
	since this is a data viewer and not an image viewer. Bug reported by
	Maik Keller <keller@fb12.uni-siegen.de>.

2007-09-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Remove unused --debug option for configure script.
	* configure.ac, doc/cvlview.texi, doc/cvlview.1: Bump version numbers
	and dates for 0.1.1.
	* NEWS: Update for 0.1.1.
	* doc/Makefile.am: Distribute man page.

2007-09-05  Martin Lambers <marlam@marlam.de>

	* Force initializeGL() in constructor. This prevents potential
	segfaults when other parts of the application use our GL context for
	CVL calls.

2007-09-04  Martin Lambers <marlam@marlam.de>

	* Update information in the AboutBox.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Initial public release.